default/objects/CreditreformAccess__c/CreditreformAccess__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CreditreformAccess</label>
</CustomObject>