default/objects/CreditreformAccess__c/fields/General_Password__c.field-meta.xml
<CustomField>
    <fullName>General_Password__c</fullName>
    <label>General Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>