default/objects/CreditreformAccess__c/fields/Individual_Password__c.field-meta.xml
<CustomField>
    <fullName>Individual_Password__c</fullName>
    <label>Individual Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>