default/objects/CreditreformAccess__c/fields/User_Account__c.field-meta.xml
<CustomField>
    <fullName>User_Account__c</fullName>
    <label>User Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>